--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="container content">
         <h1 class="fw-light">MKAQ Downloader</h1>
         <p id="p1" class="lead">Der Link wird geladen.</p>
-        <p id="p2" class="lead" style="display: none;">Der Download sollte in wenigen Sekunden automatisch beginnen. Falls nicht, können Sie <a id="dl-link">hier</a> klicken.</p>
+        <p id="p2" class="lead" style="display: none;">Der Download sollte in automatisch beginnen. Falls nicht, können Sie <a id="dl-link">hier</a> klicken.</p>
         <p id="p3" class="lead" style="display: none;">Es ist ein Fehler aufgetreten.</p>
       </div>
     </section>
