--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- meta -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Generieren Sie direkte MediaFire Download-Links ohne nervige Download-Seiten! | fab3F Homepage">
+<meta name="description" content="Generiere einen direkten Download Link für MediaFire Links ohne nervige Download Seite und Werbung! | fab3F Homepage">
 <meta name="keywords" content="fab3F, fab3F Homepage, programmieren, Projekte, csv, csv viewer, online, csv viewer online, mediafire, download, link, direct">
 <meta name="author" content="fab3F">
 <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
@@ -43,7 +43,7 @@
 <!-- Social Media Stuff -->
 <meta property="og:title" content="MKAQ Downloader - fab3F Homepage" />
 <meta property="og:url" content="https://fab3F.github.io" />
-<meta property="og:description" content="Generieren Sie direkte MediaFire Download-Links ohne nervige Download-Seiten! | fab3F Homepage" />
+<meta property="og:description" content="Generiere einen direkten Download Link für MediaFire Links ohne nervige Download Seite und Werbung! | fab3F Homepage" />
 <meta property="og:image" content="/images/fab3F_white.png" />
 <meta name="twitter:site" content="@fab3F_official" />
 <meta name="twitter:card" content="summary" />
@@ -53,7 +53,7 @@
 <script src="/js/space.js" defer></script>
 
 <!-- Google Search canonical -->
-<link rel="canonical" href="https://fab3F.github.io/a/" />
+<link rel="canonical" href="https://mkaq.github.io" />
 
 <!-- Cookies -->
 <script src="/js/cookies.js" defer></script>
@@ -128,7 +128,7 @@
         <h1 class="fw-light">MKAQ Downloader</h1>
         <p id="p1" class="lead">Der Link wird geladen.</p>
         <p id="p2" class="lead" style="display: none;">Der Download sollte in automatisch beginnen. Falls nicht, können Sie <a id="dl-link">hier</a> klicken.</p>
-        <p id="p3" class="lead" style="display: none;">Es ist ein Fehler aufgetreten.</p>
+        <p id="p3" class="lead" style="display: none;">Leider ist ein Fehler aufgetreten. <a href="/projects/mkaq" target="_self">Hier</a> können Sie Ihren eigenen Link erstellen.</p>
       </div>
     </section>
   </div>
