--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
 <!-- Base -->
-<base href="https://fab3F.github.io" target="_self">
+<base href="https://fab3F.github.io/" target="_self">
 <link rel="manifest" href="/site.webmanifest">
 
 <!-- Styles -->
@@ -41,8 +41,10 @@
 <meta name="theme-color" content="#202124">
 
 <!-- Social Media Stuff -->
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="fab3F Homepage" />
 <meta property="og:title" content="MKAQ Downloader - fab3F Homepage" />
-<meta property="og:url" content="https://fab3F.github.io" />
+<meta property="og:url" content="https://mkaq.github.io/" />
 <meta property="og:description" content="Generiere einen direkten Download Link für MediaFire Links ohne nervige Download Seite und Werbung! | fab3F Homepage" />
 <meta property="og:image" content="/images/fab3F_white.png" />
 <meta name="twitter:site" content="@fab3F_official" />
@@ -53,7 +55,7 @@
 <script src="/js/space.js" defer></script>
 
 <!-- Google Search canonical -->
-<link rel="canonical" href="https://mkaq.github.io" />
+<link rel="canonical" href="https://mkaq.github.io/" />
 
 <!-- Cookies -->
 <script src="/js/cookies.js" defer></script>
@@ -153,7 +155,7 @@
         <a href="#projects">Projekte</a>
         <a href="#contact">Kontakt</a>
         <a href="/idn">Impressum, Datenschutz & Nutzungsbedingungen</a>
-        <a href="https://mkaq.github.io" onclick="showCookiePopup()">Datenschutzeinstellungen</a>
+        <a onclick="showCookiePopup()">Datenschutzeinstellungen</a>
       </p>
       
       <p class="footer-emailtext">E-Mail: 
