--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="container content">
         <h1 class="fw-light">MKAQ Downloader</h1>
         <p id="p1" class="lead">Der Link wird geladen.</p>
-        <p id="p2" class="lead" style="display: none;">Der Download sollte in automatisch beginnen. Falls nicht, können Sie <a id="dl-link">hier</a> klicken.</p>
+        <p id="p2" class="lead" style="display: none;">Der Download sollte automatisch beginnen. Falls nicht, können Sie <a id="dl-link">hier</a> klicken.</p>
         <p id="p3" class="lead" style="display: none;">Leider ist ein Fehler aufgetreten. <a href="projects/mkaq" target="_self">Hier</a> können Sie Ihren eigenen Link erstellen.</p>
       </div>
     </section>
