added fallback and error handling for mobile devices

--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
       <div class="container content">
         <h1 class="fw-light">MKAQ Downloader</h1>
         <p id="p1" class="lead">Der Link wird geladen.</p>
-        <p id="p2" class="lead" style="display: none;">Der Download sollte automatisch beginnen. Falls nicht, können Sie <a id="dl-link">hier</a> klicken.</p>
-        <p id="p3" class="lead" style="display: none;">Leider ist ein Fehler aufgetreten. <a href="projects/mkaq" target="_self">Hier</a> können Sie Ihren eigenen Link erstellen.</p>
+        <p id="p2" class="lead" style="display: none;">Ungültiger Link!</p>
+        <p id="p3" class="lead" style="display: none;">Der Download sollte automatisch beginnen. Falls nicht, können Sie <a id="dl-link">hier</a> klicken.</p>
+        <p id="p4" class="lead" style="display: none;">Automatischer Download fehlgeschlagen! <a id="mf-link" href="">Manuell starten</a>.</p>
+        <p class="lead">Der automatische Download von MediaFire ist ganz praktisch? Kein Problem! Auf meiner <a href="projects/mkaq">Website</a> können Sie Ihren eigenen automatischen Download-Link erstellen.</p>
       </div>
     </section>
   </div>
